--- a/webui/static/index.html
+++ b/webui/static/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="s12" id="configuration">
-                    <div id="config" class="container">
+                    <div id="config" class="row">
                     </div>
                 </div>
             </div>
